update download link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p></p>
         <h1>Badeappen</h1>
         <img class="screenshot" src="img/screen.jpg" alt="screenshot">
-        <a class="btn" href="https://www.dropbox.com/sh/j8njooam2jz47ik/AAC0ph2stA0fWWfu5vG_J0poa?dl=0" download>Download</a>
+        <a class="btn" href="https://www.dropbox.com/s/9lxdt07o76um9lj/badetemperatur.zip?dl=0" download>Download</a>
 
     </div>
 </body>
