download from NoFile.io

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p></p>
         <h1>Badeappen</h1>
         <img class="screenshot" src="img/screen.jpg" alt="screenshot">
-        <a class="btn" href="https://www.dropbox.com/s/9lxdt07o76um9lj/badetemperatur.zip?dl=0" download>Download</a>
+        <a class="btn" href="https://nofile.io/g/p95P1dPEV8J7bdMlWk2AJOiSeu583Xxc26Dk5tsYrgA3jAqGC7XYPZpmKIxqeVZX/badetemperatur.app.zip/" download>Download</a>
 
     </div>
 </body>
