new download link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <p></p>
         <h1>Badeappen</h1>
         <img class="screenshot" src="img/screen.jpg" alt="screenshot">
-        <a class="btn" href="https://nofile.io/g/p95P1dPEV8J7bdMlWk2AJOiSeu583Xxc26Dk5tsYrgA3jAqGC7XYPZpmKIxqeVZX/badetemperatur.app.zip/" download>Download</a>
+        
+        <a class="btn" href="https://www.dropbox.com/s/w0o9qp9y9kyt5qa/badetemperatur.app.zip?dl=1" download> badetemperatur.app.zip</a>
 
     </div>
 </body>
