--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Badeappen</h1>
         <img class="screenshot" src="img/screen.jpg" alt="screenshot">
         
-        <a class="btn" href="https://www.dropbox.com/s/w0o9qp9y9kyt5qa/badetemperatur.app.zip?dl=1" download> badetemperatur.app.zip</a>
+        <a class="btn" href="https://www.dropbox.com/s/w0o9qp9y9kyt5qa/badetemperatur.app.zip?dl=1" download> Download</a>
 
     </div>
 </body>
